# prac

./: changestimer.cpp  changestimer.h
test1-QList/: CMakeLists.txt  main.cpp
test2-QVector/: CMakeLists.txt  TestObject.h  customtimervec.cpp  customtimervec.h  main.cpp
test3-QQueue/: CMakeLists.txt  customtimerque.cpp  customtimerque.h  main.cpp
test4-Buffer/: CMakeLists.txt  buffer.h  customtimerbuf.cpp  customtimerbuf.h  main.cpp
